# editorconfig-checker.rust

./: .ecrc  .editorconfig  .travis.yml  Cargo.toml
.github/workflows/: cargo-audit.yml  rust.yml
src/: architecture.rs  checker.rs  error.rs  lib.rs  main.rs  ostype.rs
