[package]
name = "editorconfig-checker-rust"
version = "0.1.0"
authors = ["Max Strübing <mxstrbng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "0.5.10"
reqwest = "0.9.24"
tar = "0.4.28"
flate2 = "1.0.13"

[dev-dependencies]
tempfile = "3.1.0"

[profile.release]
lto = true
